[init] search system

--- a/CountriesCards/index.html
+++ b/CountriesCards/index.html
@@ -10,7 +10,12 @@
   </head>
   <body>
     <main class="container">
-
+      <div class="search__input">
+        <input class="search" type="text" placeholder="Country Name...">
+      </div>
+      <div class="search__input">
+        <input class="btn" type="submit" placeholder="Country Name...">
+      </div>
       <div class="countries">
        
       </div>
