[init] update script

--- a/currency_converter/index.html
+++ b/currency_converter/index.html
@@ -203,7 +203,7 @@
             <div>
                 <label for="get__money">You Get</label>
                 <br>
-                <input type="text" name="" id="get__money" value="">
+                <input disabled type="text" name="" id="get__money" value="">
             </div>
             <div>
                 <label class="country__name--2" for="">Uzbekistan</label>
