--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -28,6 +28,9 @@
                         <img src="./img/icon-1.svg" alt="">
                     </span>
                 </div>
+                <div class="weather__text">
+                    <h1 class="text">Sunny</h1>
+                </div>
                 <div class="details">
                     <span>
                         <img src="./img/icon-umberella.png" alt="">
