[docs] end project

--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./main.css">
     <title>Weather App</title>
 </head>
+
 <body>
     <header class="header">
         <div class="search">
@@ -14,8 +16,10 @@
             <button class="search__btn">Find</button>
         </div>
     </header>
+
+    <img src="./img/loader.gif" class="loader" alt="">
     <main class="main">
-        <div class="card">
+        <!-- <div class="card">
             <div class="card__top">
                 <span>Monday</span>
                 <span>6 Oct</span>
@@ -23,9 +27,9 @@
             <div class="card__body">
                 <p class="name__country">New York</p>
                 <div class="current__celsiues">
-                    <h1>23<sup>o</sup>C</h1>
+                    <h1><span class="number__c">23</span><sup>o</sup>C</h1>
                     <span>
-                        <img src="./img/icon-1.svg" alt="">
+                        <img class="icon" src="./img/icon-1.svg" alt="">
                     </span>
                 </div>
                 <div class="weather__text">
@@ -46,66 +50,9 @@
                     </span>
                 </div>
             </div>
-        </div>
-        <div class="card">
-            <div class="card__top">
-                <span>Monday</span>
-                <span>6 Oct</span>
-            </div>
-            <div class="card__body">
-                <p class="name__country">New York</p>
-                <div class="current__celsiues">
-                    <h1>23<sup>o</sup>C</h1>
-                    <span>
-                        <img src="./img/icon-1.svg" alt="">
-                    </span>
-                </div>
-                <div class="details">
-                    <span>
-                        <img src="./img/icon-umberella.png" alt="">
-                        <span class="grey">20%</span>
-                    </span>
-                    <span>
-                        <img src="./img/icon-wind.png" alt="">
-                        <span class="grey">18km/h</span>
-                    </span>
-                    <span>
-                        <img src="./img/icon-compass.png" alt="">
-                        <span class="grey">East</span>
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card__top">
-                <span>Monday</span>
-                <span>6 Oct</span>
-            </div>
-            <div class="card__body">
-                <p class="name__country">New York</p>
-                <div class="current__celsiues">
-                    <h1>23<sup>o</sup>C</h1>
-                    <span>
-                        <img src="./img/icon-1.svg" alt="">
-                    </span>
-                </div>
-                <div class="details">
-                    <span>
-                        <img src="./img/icon-umberella.png" alt="">
-                        <span class="grey">20%</span>
-                    </span>
-                    <span>
-                        <img src="./img/icon-wind.png" alt="">
-                        <span class="grey">18km/h</span>
-                    </span>
-                    <span>
-                        <img src="./img/icon-compass.png" alt="">
-                        <span class="grey">East</span>
-                    </span>
-                </div>
-            </div>
-        </div>
+        </div> -->
     </main>
     <script src="./script.js"></script>
 </body>
+
 </html>
