[feat] fix audios bugs

--- a/qiroat/index.html
+++ b/qiroat/index.html
@@ -110,6 +110,9 @@
       </div>
    </section>
    <audio class="audio"></audio>
+   <div class="audios">
+
+   </div>
    <script src="./assets/js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
